quick EDA for feature cardinality done

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,9 +1,6 @@
 # src specific .gitignore file
 
-# the usual
-.idea
-.pyc
-
-# full dataset file too large for GitHub 
-full_data.csv
-
+# full dataset file too large for GitHub, also Outbrain owns the data
+data/full_data.csv
+data/__MACOSX
+data/full_data.csv.zip
