--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,9 @@ acs-*.bib
 # hyperref
 *.brf
 
+# IDE stuff
+.idea
+
 # knitr
 *-concordance.tex
 # TODO Comment the next line if you want to keep your tikz graphics files
