--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# IDE
+.idea
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -138,7 +141,6 @@ acs-*.bib
 
 # knitr
 *-concordance.tex
-# TODO Comment the next line if you want to keep your tikz graphics files
 *.tikz
 *-tikzDictionary
 
@@ -282,3 +284,20 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
+
+
+
+## EXTRA:
+
+# IDE
+.idea
+
+## src specific
+
+# full dataset file too large for GitHub, also Outbrain owns the data
+src/data/full_data.csv
+src/data/__MACOSX
+src/data/full_data.csv.zip
+src/data/full_data.csv
+src/data/full_data.csv.zip
+src/data/__MACOSX/._full_data.csv
